[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "common",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12"
, "macros"]

[workspace.dependencies]
macros = { path = "macros" }
